--- a/job03/style.css
+++ b/job03/style.css
@@ -17,6 +17,15 @@ section {
         margin: 0;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(2, 50% 50%);
+        grid-template-columns: repeat(2, 50%);
+    }
+}
+
+@media screen and (max-width: 767px) {
+    body {
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(1,100%);
     }
 }
